# so2-projekt

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gitignore  main.cpp  so2_projekt  so2_projekt.cbp
utils/: State.cpp  State.h  StateRaport.cpp  StateRaport.h
views/: IView.cpp  IView.h  RawConsoleMainView.cpp  RawConsoleMainView.h
workers/: BaseSeparator.cpp  BaseSeparator.h  BaseWorker.cpp  BaseWorker.h  Dealer.cpp  Dealer.h  SawmillWorker.cpp  SawmillWorker.h  TransporterToSawmill.cpp  TransporterToSawmill.h  WoodchopperWorker.cpp  WoodchopperWorker.h
